# libquic

./: .gitignore  CMakeLists.txt  Config.cmake  Config.mk  Cpp.cmake  Cpp.mk  LICENSE  Makefile  README.md
src/quic/: Android.mk  CMakeLists.txt  Makefile  Makefile.Common.mk  libquic.vcxproj
src/quic/base/: at_exit.cc  bind_helpers.h  bind_internal.h  bits.h  callback.h  callback_helpers.h  callback_internal.cc  cancelable_callback.h  critical_closure.h  hash.cc  hash.h  lazy_instance.h  native_library_mac.mm  native_library_posix.cc  observer_list.h  optional.h  pending_task.cc  pending_task.h  pickle.cc  pickle.h  rand_util.cc  rand_util_posix.cc  rand_util_win.cc  run_loop.cc  run_loop.h  sequence_checker.h  sequenced_task_runner.cc  sequenced_task_runner.h  stl_util.h  sync_socket.h  sync_socket_win.cc  sys_byteorder.h  task_runner.cc  task_runner.h  task_runner_util.h  version.cc
src/quic/base/containers/: circular_deque.h  flat_map.h  mru_cache.h  small_map.h  vector_buffer.h
src/quic/base/files/: file.cc  file_descriptor_watcher_posix.cc  file_enumerator_posix.cc  file_path.cc  file_path.h  file_posix.cc  file_util.cc  file_util.h  file_util_mac.mm  file_util_posix.cc  scoped_file.cc  scoped_file.h
src/quic/base/mac/: call_with_eh_frame.h  mac_util.h  mac_util.mm  scoped_cftyperef.h  scoped_mach_port.cc  scoped_mach_port.h  scoped_nsautorelease_pool.h  scoped_nsautorelease_pool.mm  scoped_typeref.h
src/quic/base/memory/: protected_memory_cfi.h  ref_counted.cc  ref_counted.h  scoped_refptr.h  singleton.h  weak_ptr.cc  weak_ptr.h
src/quic/base/message_loop/: incoming_task_queue.cc  incoming_task_queue.h  message_loop.cc  message_loop.h  message_loop_task_runner.cc  message_loop_task_runner.h  message_pump_default.cc  message_pump_libevent.cc  message_pump_libevent.h  message_pump_mac.h  message_pump_mac.mm  message_pump_win.cc  message_pump_win.h
src/quic/base/strings/: string16.cc  string_number_conversions.cc  string_number_conversions.h  string_piece.cc  string_piece.h  string_split.cc  string_util.cc  string_util_posix.h  string_util_win.h  stringprintf.cc  sys_string_conversions_mac.mm  sys_string_conversions_posix.cc  utf_string_conversion_utils.cc  utf_string_conversion_utils.h  utf_string_conversions.cc  utf_string_conversions.h
src/quic/base/synchronization/: atomic_flag.cc  condition_variable.h  condition_variable_posix.cc  condition_variable_win.cc  lock.cc  lock.h  lock_impl.h  lock_impl_posix.cc  lock_impl_win.cc  waitable_event_mac.cc  waitable_event_posix.cc  waitable_event_win.cc
src/quic/base/threading/: platform_thread_internal_posix.cc  platform_thread_linux.cc  platform_thread_mac.mm  platform_thread_posix.cc  platform_thread_win.cc  post_task_and_reply_impl.cc  post_task_and_reply_impl.h  scoped_blocking_call.cc  scoped_blocking_call.h  sequence_local_storage_map.cc  sequenced_task_runner_handle.cc  simple_thread.cc  thread.cc  thread.h  thread_collision_warner.cc  thread_id_name_manager.cc  thread_local_storage.cc  thread_local_storage_posix.cc  thread_local_storage_win.cc  thread_restrictions.cc  thread_restrictions.h  thread_task_runner_handle.cc
src/quic/base/time/: time.cc  time.h  time_conversion_posix.cc  time_mac.cc  time_now_posix.cc  time_win.cc
src/quic/base/timer/: timer.cc  timer.h
src/quic/base/win/: base_features.h  com_init_check_hook.h  object_watcher.cc  registry.cc  resource_util.cc  scoped_com_initializer.cc  scoped_com_initializer.h  scoped_handle.cc  scoped_handle.h
src/quic/crypto/: ec_private_key.cc  hkdf.cc  hmac.cc  openssl_util.cc  openssl_util.h  rsa_private_key.cc  secure_hash.cc  signature_verifier.cc  symmetric_key.cc
src/quic/net/base/: address_family.cc  address_list.cc  address_list.h  hex_utils.cc  host_port_pair.cc  interval_set.h  io_buffer.cc  ip_address.cc  ip_address.h  ip_endpoint.cc  linked_hash_map.h  load_timing_info.cc  net_arena.cc  net_errors.cc  net_errors.h  net_errors_posix.cc  net_errors_win.cc  request_priority.cc  winsock_init.cc  winsock_util.cc
src/quic/net/quic/chromium/: quic_chromium_alarm_factory.cc  quic_chromium_packet_reader.cc  quic_chromium_packet_reader.h  quic_chromium_packet_writer.cc  quic_chromium_packet_writer.h  quic_utils_chromium.h
src/quic/net/quic/core/: packet_number_indexed_queue.h  priority_write_scheduler.h  quic_alarm.cc  quic_arena_scoped_ptr.h  quic_bandwidth.h  quic_buffered_packet_store.cc  quic_buffered_packet_store.h  quic_config.cc  quic_config.h  quic_connection.cc  quic_connection.h  quic_connection_stats.cc  quic_control_frame_manager.cc  quic_crypto_client_handshaker.cc  quic_crypto_client_handshaker.h  quic_crypto_client_stream.cc  quic_crypto_client_stream.h  quic_crypto_handshaker.cc  quic_crypto_server_handshaker.cc  quic_crypto_server_handshaker.h  quic_crypto_server_stream.cc  quic_crypto_server_stream.h  quic_crypto_stream.cc  quic_crypto_stream.h  quic_data_reader.cc  quic_data_reader.h  quic_data_writer.cc  quic_data_writer.h  quic_flow_controller.cc  quic_flow_controller.h  quic_framer.cc  quic_framer.h  quic_header_list.cc  quic_header_list.h  (+43 more)
src/quic/net/socket/: client_socket_handle.cc  client_socket_handle.h  client_socket_pool.h  datagram_client_socket.h  datagram_socket.h  server_socket.cc  server_socket.h  socket.cc  socket.h  socket_net_log_params.cc  socket_options.cc  socket_posix.cc  socket_posix.h  socket_tag.cc  ssl_client_socket_impl.cc  ssl_client_socket_impl.h  stream_socket.cc  stream_socket.h  tcp_client_socket.cc  tcp_client_socket.h  tcp_server_socket.cc  tcp_server_socket.h  tcp_socket_posix.cc  tcp_socket_posix.h  tcp_socket_win.cc  tcp_socket_win.h  udp_client_socket.cc  udp_client_socket.h  udp_server_socket.cc  udp_server_socket.h  udp_socket_posix.cc  udp_socket_posix.h  udp_socket_win.cc  udp_socket_win.h  unix_domain_server_socket_posix.h
src/quic/net/ssl/: channel_id_store.cc  channel_id_store.h  ssl_client_session_cache.cc  ssl_client_session_cache.h  ssl_config.cc  ssl_config.h  ssl_config_service.cc  ssl_config_service.h  ssl_connection_status_flags.h  ssl_info.cc  ssl_info.h  token_binding.cc
(+124 files in other folders)
